--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "node-os-utils": "^1.3.7",
+    "sqlite3": "^5.1.6",
     "vue": "^2.6.14",
     "vue-router": "^3.5.3",
     "vuetify": "^2.6.0"
