--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "electron:build-local": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service electron:build",
-    "electron:build": "vue-cli-service electron:build sqlite3.node",
+    "electron:build-local": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service electron:build sqlite3.node",
+    "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "postuninstall": "electron-builder install-app-deps",
+    "actions:build": "npx electron-builder --linux --windows --mac"
   },
   "main": "background.js",
   "dependencies": {
