--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "electron:build-local": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service electron:build sqlite3.node",
-    "electron:build": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service electron:build",
+    "electron:build": "vue-cli-service electron:build",
+    "linux:electron:build": "export NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service electron:build",
+    "win:electron:build": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service electron:build",
+    "mac:electron:build": "export NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
