--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "electron:build": "vue-cli-service electron:build",
     "linux:electron:build": "export NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service electron:build",
     "win:electron:build": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service electron:build",
-    "mac:electron:build": "export NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service electron:build",
+    "mac:electron:build": "export NODE_OPTIONS=--openssl-legacy-provider && export CSC_IDENTITY_AUTO_DISCOVERY=false && vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
