Add Set up Python

--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -37,6 +37,11 @@ jobs:
         with:
           node-version: 18
 
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+
       - name: install dependencies
         run: npm install
 
