--- a/package.json
+++ b/package.json
@@ -6,17 +6,17 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
+    "electron:serve": "vue-cli-service electron:serve",
     "electron:build-local": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service electron:build sqlite3.node",
     "electron:build": "vue-cli-service electron:build",
     "linux:electron:build": "export NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service electron:build",
     "win:electron:build": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service electron:build",
     "mac:electron:build": "export NODE_OPTIONS=--openssl-legacy-provider && export CSC_IDENTITY_AUTO_DISCOVERY=false && vue-cli-service electron:build",
-    "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps",
     "actions:build": "npx electron-builder --linux --windows --mac"
   },
-  "main": "background.js",
+  "main": "src/background.js",
   "dependencies": {
     "core-js": "^3.8.3",
     "node-os-utils": "^1.3.7",
