--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,10 +32,11 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
       
-      - name: Build/release Electron app
-        uses: samuelmeuli/action-electron-builder@v1
+      - name: Upload release asset
+        uses: actions/upload-release-asset@v1
         with:
-          github_token: ${{ secrets.GH_TOKEN }}
-
-          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ./dist_electron/*.AppImage
+          asset_name: ${{ github.event.release.tag_name }}.AppImage
+          asset_content_type: application/octet-stream
         
