--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,8 +35,7 @@ jobs:
       - name: Upload release asset
         uses: actions/upload-release-asset@v1
         with:
-          upload_url: ${{ github.event.release.upload_url }}
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./dist_electron/*.AppImage
           asset_name: ${{ github.event.release.tag_name }}.AppImage
           asset_content_type: application/octet-stream
-        
