--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,17 @@ on:
 jobs:
   build_on_linux:
     runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.step_version.outputs.version }}
+      upload_url: ${{ steps.step_upload_url.outputs.upload_url }}
     steps:
+
+      - id: step_version
+        run: echo "::set-output name=version::${{ steps.package_version.outputs.version }}"
+
+      - id: step_upload_url
+        run: echo "::set-output name=upload_url::${{ steps.create_release.outputs.upload_url }}"
+
       - name: Checkout code
         uses: actions/checkout@v2
 
@@ -35,7 +45,7 @@ jobs:
       - name: Upload release asset
         uses: actions/upload-release-asset@v1
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ needs.Make_GitHub_Release.outputs.upload_url }}
           asset_path: ./dist_electron/*.AppImage
           asset_name: ${{ github.event.release.tag_name }}.AppImage
           asset_content_type: application/octet-stream
