--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@slack/webhook": "^7.0.0",
     "core-js": "^3.8.3",
     "node-os-utils": "^1.3.7",
     "sqlite3": "^5.1.6",
