--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -33,6 +33,12 @@ jobs:
         run: npm run linux:electron:build
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+
+      - name: Upload Release Asset Linux
+        uses: actions/upload-artifact@v2
+        with:
+          name: Health Check Setup
+          path: ./dist_electron/*.AppImage
   build_on_mac:
     runs-on: macos-latest
     steps:
@@ -59,6 +65,12 @@ jobs:
         run: npm run mac:electron:build
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+
+      - name: Upload Release Asset Mac
+        uses: actions/upload-artifact@v2
+        with:
+          name: Health Check Setup
+          path: ./dist_electron/*.dmg
   build_on_win:
     runs-on: windows-latest
     steps:
@@ -84,3 +96,9 @@ jobs:
         run: npm run win:electron:build
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+    
+      - name: Upload Release Asset Windows
+        uses: actions/upload-artifact@v2
+        with:
+          name: Health Check Setup
+          path: ./dist_electron/*.exe
