--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -34,11 +34,11 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
-      - name: Upload Release Asset Linux
-        uses: actions/upload-artifact@v2
-        with:
-          name: Health Check Setup
-          path: ./dist_electron/*.AppImage
+      # - name: Upload Release Asset Linux
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: Health Check Setup
+      #     path: ./dist_electron/*.AppImage
   build_on_mac:
     runs-on: macos-latest
     steps:
@@ -66,11 +66,11 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
-      - name: Upload Release Asset Mac
-        uses: actions/upload-artifact@v2
-        with:
-          name: Health Check Setup
-          path: ./dist_electron/*.dmg
+      # - name: Upload Release Asset Mac
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: Health Check Setup
+      #     path: ./dist_electron/*.dmg
   build_on_win:
     runs-on: windows-latest
     steps:
@@ -97,8 +97,8 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
     
-      - name: Upload Release Asset Windows
-        uses: actions/upload-artifact@v2
-        with:
-          name: Health Check Setup
-          path: ./dist_electron/*.exe
+      # - name: Upload Release Asset Windows
+      #   uses: actions/upload-artifact@v2
+      #   with:
+      #     name: Health Check Setup
+      #     path: ./dist_electron/*.exe
