--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,7 @@ jobs:
             uses: "marvinpinto/action-automatic-releases@latest"
             with:
                 repo_token: ${{ secrets.GH_TOKEN }}
+                automatic_release_tag: "latest"
                 prerelease: false
                 files: |
                     ./dist_electron/*.AppImage
