--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,18 +6,11 @@ on:
         - 'v*'
 
 jobs:
-    build_on_linux:
-        runs-on: ubuntu-latest
+    build_and_release:
+        runs-on: [macos-latest, ubuntu-latest, windows-latest]
         steps:
           - name: Checkout code
             uses: actions/checkout@v2
-    
-          - name: Cache node_modules
-            uses: actions/cache@v2
-            with:
-              path: |
-                node_modules
-              key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
     
           - name: Set up Node.js
             uses: actions/setup-node@v2
@@ -28,87 +21,17 @@ jobs:
             run: npm install
     
           - name: Package Electron app
-            run: npm run linux:electron:build
+            run: npm run electron:build
             env:
               GH_TOKEN: ${{ secrets.GH_TOKEN }}
-    
-        #   - name: Upload Release Asset Linux
-        #     uses: actions/upload-artifact@v2
-        #     with:
-        #       name: Health Check Setup
-        #       path: ./dist_electron/*.AppImage
 
           - name: Create a Release
             uses: "marvinpinto/action-automatic-releases@latest"
             with:
                 repo_token: ${{ secrets.GH_TOKEN }}
-                automatic_release_tag: "latest"
+                automatic_release_tag: "${{ github.ref_name }}-latest"
                 prerelease: false
                 files: |
                     ./dist_electron/*.AppImage
                     ./dist_electron/*.dmg
                     ./dist_electron/*.exe
-    # build_on_mac:
-    # runs-on: macos-latest
-    # steps:
-    #     - name: Checkout code
-    #     uses: actions/checkout@v2
-
-    #     - name: Cache node_modules
-    #     uses: actions/cache@v2
-    #     with:
-    #         path: |
-    #         node_modules
-    #         key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
-    #     if: runner.os == 'macOS'
-
-    #     - name: Set up Node.js
-    #     uses: actions/setup-node@v2
-    #     with:
-    #         node-version: 18
-
-    #     - name: install dependencies
-    #     run: npm install
-
-    #     - name: Package Electron app
-    #     run: npm run mac:electron:build
-    #     env:
-    #         GH_TOKEN: ${{ secrets.GH_TOKEN }}
-
-    #     # - name: Upload Release Asset Mac
-    #     #   uses: actions/upload-artifact@v2
-    #     #   with:
-    #     #     name: Health Check Setup
-    #     #     path: ./dist_electron/*.dmg
-    # build_on_win:
-    #     runs-on: windows-latest
-    #     steps:
-    #       - name: Checkout code
-    #         uses: actions/checkout@v2
-    
-    #       - name: Cache node_modules
-    #         uses: actions/cache@v2
-    #         with:
-    #           path: |
-    #             node_modules
-    #           key: ${{ runner.os }}-npm-${{ hashFiles('**/package-lock.json') }}
-    
-    #       - name: Set up Node.js
-    #         uses: actions/setup-node@v2
-    #         with:
-    #           node-version: 18
-    
-    #       - name: install dependencies
-    #         run: npm install
-    
-    #       - name: Package Electron app
-    #         run: npm run win:electron:build
-    #         env:
-    #           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-        
-    #       # - name: Upload Release Asset Windows
-    #       #   uses: actions/upload-artifact@v2
-    #       #   with:
-    #       #     name: Health Check Setup
-    #       #     path: ./dist_electron/*.exe
-    
