--- a/.github/workflows/electron.yml
+++ b/.github/workflows/electron.yml
@@ -30,7 +30,7 @@ jobs:
         run: npm install
 
       - name: Package Electron app
-        run: npm run Linux:electron:build
+        run: npm run linux:electron:build
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
@@ -62,7 +62,7 @@ jobs:
         run: npm install
 
       - name: Package Electron app
-        run: npm run macOS:electron:build
+        run: npm run mac:electron:build
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
 
@@ -93,7 +93,7 @@ jobs:
         run: npm install
 
       - name: Package Electron app
-        run: npm run Windows:electron:build
+        run: npm run win:electron:build
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
     
