--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,7 +71,7 @@ jobs:
             uses: svenstaro/upload-release-action@v2
             with:
                 repo_token: ${{ secrets.GITHUB_TOKEN }}
-                file: ${{github.workspace}}/${{ steps.set_artifact_filename.outputs.filename }}
+                file: ${{ steps.set_artifact_filename.outputs.filename }}
                 asset_name: HealthCheck-${{ steps.set_artifact_filename.outputs.filename }}
                 tag: ${{ github.ref }}
 
